[package]
name = "ansi-and-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.15.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.23.1", features = [
    "esp32c6",
] }
esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }
log = { version = "0.4.25" }
esp-alloc = { version = "0.6.0" }
embedded-io = "0.6.1"

embedded-io-async = "0.6.1"
embassy-net = { version = "0.6.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }

esp-wifi = { version = "0.12.0", default-features=false, features = [
    "esp32c6",
    "utils",
    "wifi",
    "esp-alloc",
    "log",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-executor = { version = "0.7.0",  features = [
    "task-arena-size-12288",

    "rtos-trace", # instrumentation!
] }
embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.6.0",  features = ["esp32c6"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }



critical-section = "1.2.0"
fugit = "0.3.7"

embedded-hal = "1.0.0"

rtos-trace = "0.1.3"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
